## Process this file with automake to produce Makefile.in
man_MANS= fcat.1 fcatcmd.1 fcd.1 fcdcmd.1 fdu.1 fducmd.1 ffind.1 ffindcmd.1 \
          fget.1 fgetcmd.1 fgrab.1 fgrabcmd.1 fhost.1 fhostcmd.1 fls.1 \
	  flscmd.1 fmkdir.1 fpro.1 fprocmd.1 fput.1 frm.1 frmcmd.1 frmdir.1 \
	  frmdircmd.1 fsp_prof.5 fspd.1 fver.1 fstatcmd.1 fstat.1 \
	  fspscan.1 fsp_env.7 fbye.1 fspsites.5 fmv.1 fmvcmd.1 \
	  fsetup.1 fsetupcmd.1

EXTRA_DIST=$(man_MANS)
