## Process this file with automake to produce Makefile.in
man_MANS = fcatcmd.1 \
	fcdcmd.1 \
	fducmd.1 \
	ffindcmd.1 \
	fgetcmd.1 \
	fgrabcmd.1 \
	flscmd.1 \
	fmkdir.1 \
	fprocmd.1 \
	fput.1 \
	frmcmd.1 \
	frmdircmd.1 \
	fspd.1 \
	fver.1 \
	fstatcmd.1 \
	fspscan.1 \
	fsp_env.7 \
	fbye.1 \
	fmvcmd.1

EXTRA_DIST=$(man_MANS)
